updated name line

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div>
 
-        <h5>My name is Jake</h5>
+        <h5>My name is Jake also it's a cool name</h5>
         <p> I am learning to code.</p>
 
         <img width="200" height="110"
